# RDMA_synchronization

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.org
backend/: .#CMakeLists.txt  CMakeLists.txt
backend/nam/: Compute.cpp  Compute.hpp  Config.cpp  Config.hpp  NAM.cpp  NAM.hpp  Storage.cpp  Storage.hpp
backend/nam/profiling/: CounterRegistry.hpp  ProfilingThread.hpp
backend/nam/profiling/counters/: CPUCounters.cpp  CPUCounters.hpp  RDMACounters.cpp  RDMACounters.hpp  WorkerCounters.cpp  WorkerCounters.hpp
backend/nam/rdma/: CommunicationManager.hpp
backend/nam/syncprimitives/: HybridLatch.hpp  SpinLock.hpp
backend/nam/threads/: Concurrency.hpp  CoreManager.hpp  ThreadContext.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp
backend/nam/utils/: BatchQueue.hpp  FNVHash.cpp  FNVHash.hpp  MPMCQueue.hpp  MemoryManagement.hpp  Parallelize.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ScrambledZipfGenerator.cpp  ScrambledZipfGenerator.hpp  Time.cpp  Time.hpp  ZipfGenerator.cpp  ZipfGenerator.hpp  ZipfRejectionInversion.hpp  crc64.cpp  crc64.hpp  crcspeed.cpp  crcspeed.hpp
distexperiments/distexprunner/: .gitignore  README.md  client.py  server.py
distexperiments/distexprunner/distexprunner/: __init__.py  _client_impl.py  _client_interface.py  _exceptions.py  _progressbar.py  _resume_manager.py  _rpc.py  _server_impl.py  _server_interface.py  enums.py  experiment_client.py  experiment_server.py  notification.py  outputs.py  parameter_grid.py  registry.py  server.py  server_list.py  stdin_controller.py  utils.py
distexperiments/distexprunner/tests/: progressbar_test.py
distexperiments/distexprunner/v1_compatibility/: config.py  experiment.py  old_example.py
distexperiments/experiments/: alignment.py  alignment_hypo.py  atomic_cas.py  atomic_fa.py  atomic_nocontention.py  batched_atomics.py  batched_reads.py  broken_reads.py  btree.py  config.py  contention_reads_atomics.py  locking_ablation.py  locking_benchmark.py  locking_benchmark_sleep.py  nam_experiment.py  no_locking_benchmark.py  opt_btree.py  optdb_debug.py  optdb_experiment.py  optdb_nambaseline.py  optimistic_scaleout.py  optimistic_single_threaded_new.py  optimistic_zipf.py  optmistic_st.py  read_benchmark.py  sleep_effect_compute.py  sleep_effect_storage.py  sleep_effect_two_cnics.py
frontend/: BenchmarkHelper.hpp  CMakeLists.txt  OptimisticLocks.hpp  atomic_alignment.cpp  atomic_alignment_ws.cpp  atomic_benchmark.cpp  atomic_visibility.cpp  batched_atomics.cpp  batched_reads.cpp  broken_remote_write.cpp  btree.cpp  cas_benchmark.cpp  contention_reads_atomics.cpp  exception_hack.hpp  fa_benchmark.cpp  frontend.cpp  lock.cpp  locking_benchmark.cpp  locking_benchmark_tail.cpp  nam_experiment.cpp  no_locking_benchmark.cpp  opt_btree.cpp  optdb_experiment.cpp  optimistic_st.cpp  optmistic_benchmark.cpp  ordering_fixed.cpp  pause_effect.cpp  read_benchmark.cpp  torn_writes.cpp
shared-headers/: Defs.hpp
